# 3DClothSim

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
include/: clothgrid.h  clothsim.h  clothwidget.h  openGL.h
src/: clothgrid.cpp  clothsim.cpp  clothwidget.cpp  main.cpp  openGL.cpp
test/: test_cloth.cpp
